/**
* @file:   ./proto/subtask.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message SUBTASK{
    /** id */
    required string id = 1 [default = ""];
    /** 战斗数据ID */
    required string battleData = 2 [default = ""];
    /** 对应的每场战斗难度系数 */
    required string diffs = 3 [default = ""];
    /** 对应的每场战斗时间限制（秒） */
    required string totalTimes = 4 [default = ""];
    /** 中文任务名称 */
    required string name_ch = 5 [default = ""];
    /** 消耗体力 */
    required int32 expendSt = 6 [default = 0];
    /** 总挑战次数 */
    required int32 fightCount = 7 [default = 0];
    /** 账号获得经验 */
    required int32 idExp = 8 [default = 0];
    /** 英雄获得经验 */
    required int32 heroExp = 9 [default = 0];
    /** 获得金币 */
    required int32 dropGold = 10 [default = 0];
    /** 所属系列任务 --> */
    required string pointParentId = 11 [default = ""];
    /** 优先级 */
    required float priority = 12 [default = 0];
    /** 参考战力 */
    required int32 fightPower = 13 [default = 0];
}

message SUBTASK_ARRAY {
    repeated SUBTASK items = 1;
}
